fix: fixed large latex formula cropping & overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -163,3 +163,11 @@ em strong {
         margin: 0;
     }
 }
+
+/*
+    latex
+*/
+.katex-display {
+    height: fit-content;
+    overflow: auto hidden;
+}
